--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -973,7 +973,8 @@ section .container {
   padding: 15px 0 0 0;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 992px
+) {
   .portfolio-details .portfolio-info {
     padding-top: 20px;
   }
